--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Javascript Bubble Sort example</title>
+  <title>Javascript Bubble Sort</title>
   
 <style>
 		body {
